tests/lifetime/unborrow/unborrow_invalid.err.expected
error: at 43:5: [TC-UnborrowNonReference] In function 'unborrow_of_non_ref_type', block 'entry': unborrow requires a reference-typed place, found i64
    |
 42 |   entry:
 43 |     unborrow x;
    |     ^^^^^^^^^^
 44 |     return
    |
